crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__remove_unknowns_and_defaults__remove_unknowns_and_defaults-8.snap
---
source: crates/oxvg_optimiser/src/jobs/remove_unknowns_and_defaults.rs
expression: "test_config(r#\"{ \"removeUnknownsAndDefaults\": {} }\"#,\nSome(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\" x=\"0\" y=\"0\">\n    <!-- remove defaults of non-inheritable values -->\n    <svg x=\"10\" y=\"10\">\n        <svg x=\"0\" y=\"0\">\n            <path/>\n        </svg>\n        <svg x=\"0\" y=\"10\">\n            <path/>\n        </svg>\n        <svg x=\"50\" y=\"0\">\n            <path/>\n        </svg>\n    </svg>\n    <svg x=\"100\" y=\"100\">\n        <path/>\n    </svg>\n</svg>\"#),)?"
---
<svg xmlns="http://www.w3.org/2000/svg">
    <!-- remove defaults of non-inheritable values -->
    <svg x="10" y="10">
        <svg>
            <path/>
        </svg>
        <svg y="10">
            <path/>
        </svg>
        <svg x="50">
            <path/>
        </svg>
    </svg>
    <svg x="100" y="100">
        <path/>
    </svg>
</svg>
